# fast-api-todo-app

./: .bandit  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README  README.md  alembic.ini  bandit.yaml  build-run.ps1  build-run.sh  docker-compose.yml  pyproject.toml  pytest.env  run.py  test-run.sh
.github/workflows/: ci.yml
alembic/: __init__.py  env.py
alembic/versions/: 41c70ff97209_initial_migration.py  47c87c38d43c_initial_migration.py  7af61415ee11_initial_migration.py  a49a22913272_init_migration.py  a95c2dc5bbc9_init_migration.py
app/: __init__.py  dependencies.py  main.py
app/api/: health_routes.py  todo_routes.py
app/config/: __init__.py  database.py  environment.py  server.py  settings.py
app/exceptions/: __init__.py  db_connection_async_support_missing.py  env_missing_exception.py  env_wrong_format.py  health_check_exception.py  todo_exception.py  user_exception.py
app/interfaces/api/v1/controllers/: __init__.py  health_check_controller.py  todo_batch_controller.py  todo_controller.py  todo_single_controller.py  user_controller.py
app/middleware/: __init__.py  jwt_middleware.py
app/models/: __init__.py  shared_base_model.py  todo_model.py  user_model.py
app/repositories/: __init__.py  todo_mem_repo_impl.py  todo_mem_repository_impl.py  todo_pg_repo_impl.py  todo_pg_repository_impl.py  todo_repository.py  todo_repository_interface.py  user_pg_repository_impl.py  user_repository_interface.py
app/schemas/: __init__.py  health_check_schema.py  todo_schema.py  user_schema.py
app/services/: __init__.py  jwt_service.py  todo_service.py  user_service.py
app/utils/: __init__.py  build_db_connection.py  env_util.py  env_utils.py  logger_util.py  password_hash_util.py
tests/: __init__.py  conftest.py  test_dependencies.py  test_env_utils.py  test_system_todo.py  test_system_todo_item.py  test_system_user.py  test_todo_pg_repository.py  test_todo_repository.py  test_todo_service.py  test_unit_env_utils.py  test_unit_todo_pg_repository.py  test_unit_todo_service.py  test_unit_user_pg_repository.py  util_db_test_connection.py
